K-Means clustering added

--- a/Day 10 - SVM Classification/Support_Vector_Machine.ipynb
+++ b/Day 10 - SVM Classification/Support_Vector_Machine.ipynb
@@ -58,6 +58,7 @@
     }
    ],
    "source": [
+    "# Feature Scaling\n",
     "sc = StandardScaler()\n",
     "X_train = sc.fit_transform(X_train)\n",
     "X_test = sc.transform(X_test)"
